Adding more criteria to api call
