# flux/defaultHandlers.js
@@ -2,9 +2,9 @@
 import MongoDataSource from '../dataaccess/MongoDataSource';
 import Lang from 'lodash';
 
-function findTreatmentOptionsByPatientStats(disease,race,dxGrade,resolve,reject) {
+function findTreatmentOptionsByPatientStats(args, resolve,reject) {
     const da = new MongoDataSource();
-    return da.findTreatmentOptionsByPatientStats(disease, race, dxGrade);
+    return da.findTreatmentOptionsByPatientStats(args);
 }
 
 module.exports = {
