# nodejs-server-server/controllers/Default.js
@@ -4,10 +4,7 @@ var utils = require('../utils/writer.js');
 var Default = require('../service/DefaultService');
 
 module.exports.findTreatmentOptionsByPatientStats = function findTreatmentOptionsByPatientStats (req, res, next) {
-  var disease = req.swagger.params['Disease'].value;
-  var race = req.swagger.params['Race'].value;
-  var dxGrade = req.swagger.params['dxGrade'].value;
-  Default.findTreatmentOptionsByPatientStats(disease,race,dxGrade)
+  Default.findTreatmentOptionsByPatientStats(req.swagger.params)
     .then(function (response) {
       utils.writeJson(res, response);
     })
